<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_25_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_50_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_75_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_90_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_80_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_70_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_60_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_50_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/text_c"
        style="@style/ConstraintButton"
        android:text="@string/button_c"
        app:layout_constraintBottom_toTopOf="@+id/guideline_60_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_25_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_50_horizontal" />

    <TextView
        android:id="@+id/text_del"
        style="@style/ConstraintButton"
        android:text="@string/button_del"
        app:layout_constraintBottom_toTopOf="@+id/guideline_60_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_50_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_25_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_50_horizontal" />

    <TextView
        android:id="@+id/text_dot"
        style="@style/ConstraintButton"
        android:text="@string/button_dot"
        app:layout_constraintBottom_toTopOf="@+id/guideline_60_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_75_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_50_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_50_horizontal" />

    <TextView
        android:id="@+id/text_div"
        style="@style/ConstraintButton"
        android:text="@string/button_div"
        app:layout_constraintBottom_toTopOf="@+id/guideline_60_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_75_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_50_horizontal" />

    <TextView
        android:id="@+id/text_7"
        style="@style/ConstraintButton"
        android:text="@string/button_7"
        app:layout_constraintBottom_toTopOf="@+id/guideline_70_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_25_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_60_horizontal" />

    <TextView
        android:id="@+id/text_8"
        style="@style/ConstraintButton"
        android:text="@string/button_8"
        app:layout_constraintBottom_toTopOf="@+id/guideline_70_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_50_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_25_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_60_horizontal" />

    <TextView
        android:id="@+id/text_9"
        style="@style/ConstraintButton"
        android:text="@string/button_9"
        app:layout_constraintBottom_toTopOf="@+id/guideline_70_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_75_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_50_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_60_horizontal" />

    <TextView
        android:id="@+id/text_mul"
        style="@style/ConstraintButton"
        android:text="@string/button_mul"
        app:layout_constraintBottom_toTopOf="@+id/guideline_70_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_75_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_60_horizontal" />

    <TextView
        android:id="@+id/text_4"
        style="@style/ConstraintButton"
        android:text="@string/button_4"
        app:layout_constraintBottom_toTopOf="@+id/guideline_80_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_25_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_70_horizontal" />

    <TextView
        android:id="@+id/text_5"
        style="@style/ConstraintButton"
        android:text="@string/button_5"
        app:layout_constraintBottom_toTopOf="@+id/guideline_80_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_50_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_25_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_70_horizontal" />

    <TextView
        android:id="@+id/text_6"
        style="@style/ConstraintButton"
        android:text="@string/button_6"
        app:layout_constraintBottom_toTopOf="@+id/guideline_80_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_75_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_50_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_70_horizontal" />

    <TextView
        android:id="@+id/text_sub"
        style="@style/ConstraintButton"
        android:text="@string/button_sub"
        app:layout_constraintBottom_toTopOf="@+id/guideline_80_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_75_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_70_horizontal" />

    <TextView
        android:id="@+id/text_1"
        style="@style/ConstraintButton"
        android:text="@string/button_1"
        app:layout_constraintBottom_toTopOf="@+id/guideline_90_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_25_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_80_horizontal" />

    <TextView
        android:id="@+id/text_2"
        style="@style/ConstraintButton"
        android:text="@string/button_2"
        app:layout_constraintBottom_toTopOf="@+id/guideline_90_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_50_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_25_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_80_horizontal" />

    <TextView
        android:id="@+id/text_3"
        style="@style/ConstraintButton"
        android:text="@string/button_3"
        app:layout_constraintBottom_toTopOf="@+id/guideline_90_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_75_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_50_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_80_horizontal" />

    <TextView
        android:id="@+id/text_add"
        style="@style/ConstraintButton"
        android:text="@string/button_add"
        app:layout_constraintBottom_toTopOf="@+id/guideline_90_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_75_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_80_horizontal" />

    <TextView
        android:id="@+id/text_left_bracket"
        style="@style/ConstraintButton"
        android:text="@string/button_left_bracket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_1" />

    <TextView
        android:id="@+id/text_0"
        style="@style/ConstraintButton"
        android:text="@string/button_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_50_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_25_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_90_horizontal" />

    <TextView
        android:id="@+id/text_right_bracket"
        style="@style/ConstraintButton"
        android:text="@string/button_right_bracket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_75_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_50_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_90_horizontal" />

    <TextView
        android:id="@+id/text_equal"
        style="@style/ConstraintButton"
        android:text="@string/button_equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_75_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_90_horizontal" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_50_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="vertical"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAlignment="textEnd"
            android:textColor="#000"
            android:textSize="36sp"
             />
    </ScrollView>


</android.support.constraint.ConstraintLayout>